// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Given the Sidebar component and strongBalance, weakBalance are NOT of BigNumber type when the component is rendered should match the snapshot 1`] = `
<DocumentFragment>
  <div
    class="sc-gtsrHT bOaZEi"
  >
    <div
      class="sc-gGLxEB bxbINb"
    >
      <header
        class="sc-jrsJWt chdEue"
      >
        <span />
        <img
          alt=""
          class="sc-kEqXSa isTHhe"
          src="https://picsum.photos/72"
        />
        <a
          class="sc-pNWdM dCSlbb"
        >
          <svg
            viewBox="0 0 20 20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M18.643 10.674l-3.367 3.3a.987.987 0 01-1.4-1.392l1.137-1.129c.259-.257.173-.465-.192-.465H10.3a.984.984 0 110-1.968h4.525c.363 0 .451-.208.192-.466L13.88 7.425a.987.987 0 011.4-1.392l3.359 3.262a.957.957 0 01.004 1.379zM5.365 14.936h1.977a.987.987 0 110 1.974H4.379a1.317 1.317 0 01-1.314-1.316V4.41a1.317 1.317 0 011.314-1.316h2.963a.987.987 0 110 1.974H5.365a.327.327 0 00-.33.328v9.214a.329.329 0 00.33.326z"
              fill="#8d89a3"
              fill-rule="evenodd"
            />
          </svg>
        </a>
        <div
          class="sc-iqAclL gIbAvJ"
        >
          <p>
            My Account
          </p>
          <span />
        </div>
      </header>
      <div
        class="sc-jNnpgg kjLuzq"
      >
        <div
          class="sc-bBjRSN dQbhcB"
        >
          <div
            class="sc-cOifOu"
          >
            <strong>
              ETH Balance
            </strong>
            <div
              class="sc-dPaNzc ijainM"
            >
              Loading
              <small>
                 = $16,208.04
              </small>
            </div>
          </div>
          <div
            class="sc-Arkif jojbRz"
          >
            <div
              class="sc-gSYDnn ggatJr"
            >
              <h5
                class="sc-laZMeE EUcyJ"
              >
                ETH Balance
              </h5>
              <p
                class="sc-iNiQyp hmdFLd"
              >
                This is your connected wallet Ether balance.
              </p>
            </div>
            <button
              class="sc-khIgEk kNdqRO"
            >
              i
            </button>
          </div>
        </div>
        <div
          class="sc-bBjRSN dQbhcB"
        >
          <div
            class="sc-cOifOu"
          >
            <strong>
              wNOM Balance
            </strong>
            <div
              class="sc-dPaNzc hNygBn"
            >
              Loading
              <small>
                 = $16,208.04
              </small>
              <div
                class="sc-fujyAs fSykkk"
              >
                <div
                  class="sc-iCoGMd hVrKlH"
                >
                  Loading
                </div>
                <div
                  class="sc-hTRkXV cqjNuL"
                >
                  <span>
                    Loading approved
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            class="sc-Arkif jojbRz"
          >
            <div
              class="sc-gSYDnn ggatJr"
            >
              <h5
                class="sc-laZMeE EUcyJ"
              >
                wNOM Balance
              </h5>
              <p
                class="sc-iNiQyp hmdFLd"
              >
                This shows your total wNOM balance and the amount approved for selling. You must approve wNOM for selling before it can be sold.
              </p>
            </div>
            <button
              class="sc-khIgEk kNdqRO"
            >
              i
            </button>
          </div>
        </div>
        <div
          class="sc-jgPyTC bxxRHb"
        >
          <button
            class="sc-ksluID jQjqAL"
            style="width: 100%;"
          >
            Withdraw wNOM
          </button>
        </div>
      </div>
      <div
        class="sc-eirqVv hUZbtV"
      >
        <div
          class="sc-lbVvki kGYLsX"
        >
          <strong>
            Connection
          </strong>
          <div
            class="sc-gKAaRy iiHLvK"
          >
            Loading
          </div>
        </div>
        <div
          class="sc-lbVvki kGYLsX"
        >
          <strong>
            Chain Id
          </strong>
          <span />
        </div>
        <div
          class="sc-lbVvki kGYLsX"
        >
          <strong>
            Block Number
          </strong>
          <span>
            12345678
          </span>
        </div>
      </div>
      <footer
        class="sc-jffHpj bernAh"
      >
        <a
          class="sc-eJocfa cjHyfJ"
          href="https://onomy.io/"
          target="_blank"
        >
          About Onomy
        </a>
        <div
          class="sc-hhIiOg llmQSf"
        >
          <a
            class="sc-oeezt hTHyJt"
            href="https://t.me/onomyprotocol"
            target="_blank"
          >
            <svg
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M2.966 11.085L13.195 6.87c1.01-.439 4.435-1.844 4.435-1.844s1.583-.614 1.448.875c-.044.615-.4 2.766-.746 5.093l-1.1 6.893s-.088 1.01-.834 1.185a3.611 3.611 0 01-2.2-.79c-.176-.132-3.293-2.107-4.434-3.073a.832.832 0 01.044-1.4 168.85 168.85 0 004.61-4.39c.527-.527 1.054-1.756-1.141-.263l-6.184 4.168a2.58 2.58 0 01-2.02.044c-1.317-.395-2.854-.922-2.854-.922s-1.054-.659.746-1.361z"
                fill="#5e5b70"
              />
            </svg>
          </a>
          <a
            class="sc-oeezt hTHyJt"
            href="https://medium.com/onomy-protocol"
            target="_blank"
          >
            <svg
              viewBox="0 0 20 20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                opacity="0.5"
              >
                <path
                  d="M11.281 9.979A5.641 5.641 0 115.641 4.3a5.66 5.66 0 015.641 5.679m6.188 0c0 2.952-1.263 5.347-2.82 5.347s-2.82-2.394-2.82-5.347 1.261-5.346 2.818-5.346 2.82 2.394 2.82 5.347m2.531 0c0 2.645-.444 4.79-.992 4.79s-.992-2.145-.992-4.79.445-4.79.993-4.79S20 7.334 20 9.979"
                  fill="#8d89a3"
                />
              </g>
            </svg>
          </a>
          <a
            class="sc-oeezt hTHyJt"
            href="https://twitter.com/onomyprotocol"
            target="_blank"
          >
            <svg
              viewBox="0 0 20 20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M16.555 6.438v.46a10.4 10.4 0 01-.66 3.6 10.744 10.744 0 01-1.961 3.282 9.729 9.729 0 01-3.2 2.4 10.445 10.445 0 01-4.383.921 10.247 10.247 0 01-2.922-.42 9.937 9.937 0 01-2.6-1.181q.42.041.86.04a7.14 7.14 0 002.381-.4 7.457 7.457 0 002.081-1.121 3.592 3.592 0 01-2.081-.73 3.463 3.463 0 01-1.261-1.771 3.579 3.579 0 00.66.06 3.7 3.7 0 00.941-.12 3.472 3.472 0 01-1.461-.67 3.567 3.567 0 01-1.031-1.261 3.749 3.749 0 01-.39-1.591v-.06a3.369 3.369 0 001.641.46 3.617 3.617 0 01-1.171-1.291 3.517 3.517 0 01-.43-1.711 3.574 3.574 0 01.48-1.8 10.262 10.262 0 007.4 3.762 4.156 4.156 0 01-.08-.82 3.5 3.5 0 01.48-1.8 3.627 3.627 0 011.311-1.311 3.462 3.462 0 011.791-.49 3.563 3.563 0 012.622 1.141 6.994 6.994 0 002.281-.881 3.481 3.481 0 01-.61 1.151 3.694 3.694 0 01-.971.851 7.316 7.316 0 002.081-.58 7.525 7.525 0 01-1.798 1.881z"
                fill="#8d89a3"
                opacity="0.5"
              />
            </svg>
          </a>
        </div>
      </footer>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Given the Sidebar component and strongBalance, weakBalance are of BigNumber type when the component is rendered should match the snapshot 1`] = `
<DocumentFragment>
  <div
    class="sc-gtsrHT bOaZEi"
  >
    <div
      class="sc-gGLxEB bxbINb"
    >
      <header
        class="sc-jrsJWt chdEue"
      >
        <span />
        <img
          alt=""
          class="sc-kEqXSa isTHhe"
          src="https://picsum.photos/72"
        />
        <a
          class="sc-pNWdM dCSlbb"
        >
          <svg
            viewBox="0 0 20 20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M18.643 10.674l-3.367 3.3a.987.987 0 01-1.4-1.392l1.137-1.129c.259-.257.173-.465-.192-.465H10.3a.984.984 0 110-1.968h4.525c.363 0 .451-.208.192-.466L13.88 7.425a.987.987 0 011.4-1.392l3.359 3.262a.957.957 0 01.004 1.379zM5.365 14.936h1.977a.987.987 0 110 1.974H4.379a1.317 1.317 0 01-1.314-1.316V4.41a1.317 1.317 0 011.314-1.316h2.963a.987.987 0 110 1.974H5.365a.327.327 0 00-.33.328v9.214a.329.329 0 00.33.326z"
              fill="#8d89a3"
              fill-rule="evenodd"
            />
          </svg>
        </a>
        <div
          class="sc-iqAclL gIbAvJ"
        >
          <p>
            My Account
          </p>
          <span />
        </div>
      </header>
      <div
        class="sc-jNnpgg kjLuzq"
      >
        <div
          class="sc-bBjRSN dQbhcB"
        >
          <div
            class="sc-cOifOu"
          >
            <strong>
              ETH Balance
            </strong>
            <div
              class="sc-dPaNzc ijainM"
            >
              0.000000
              <small>
                 = $16,208.04
              </small>
            </div>
          </div>
          <div
            class="sc-Arkif jojbRz"
          >
            <div
              class="sc-gSYDnn ggatJr"
            >
              <h5
                class="sc-laZMeE EUcyJ"
              >
                ETH Balance
              </h5>
              <p
                class="sc-iNiQyp hmdFLd"
              >
                This is your connected wallet Ether balance.
              </p>
            </div>
            <button
              class="sc-khIgEk kNdqRO"
            >
              i
            </button>
          </div>
        </div>
        <div
          class="sc-bBjRSN dQbhcB"
        >
          <div
            class="sc-cOifOu"
          >
            <strong>
              wNOM Balance
            </strong>
            <div
              class="sc-dPaNzc hNygBn"
            >
              0.000000
              <small>
                 = $16,208.04
              </small>
              <div
                class="sc-fujyAs fSykkk"
              >
                <div
                  class="sc-iCoGMd hVrKlH"
                >
                  Loading
                </div>
                <div
                  class="sc-hTRkXV cqjNuL"
                >
                  <span>
                    Loading approved
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            class="sc-Arkif jojbRz"
          >
            <div
              class="sc-gSYDnn ggatJr"
            >
              <h5
                class="sc-laZMeE EUcyJ"
              >
                wNOM Balance
              </h5>
              <p
                class="sc-iNiQyp hmdFLd"
              >
                This shows your total wNOM balance and the amount approved for selling. You must approve wNOM for selling before it can be sold.
              </p>
            </div>
            <button
              class="sc-khIgEk kNdqRO"
            >
              i
            </button>
          </div>
        </div>
        <div
          class="sc-jgPyTC bxxRHb"
        >
          <button
            class="sc-ksluID jQjqAL"
            style="width: 100%;"
          >
            Withdraw wNOM
          </button>
        </div>
      </div>
      <div
        class="sc-eirqVv hUZbtV"
      >
        <div
          class="sc-lbVvki kGYLsX"
        >
          <strong>
            Connection
          </strong>
          <div
            class="sc-gKAaRy iiHLvK"
          >
            Loading
          </div>
        </div>
        <div
          class="sc-lbVvki kGYLsX"
        >
          <strong>
            Chain Id
          </strong>
          <span />
        </div>
        <div
          class="sc-lbVvki kGYLsX"
        >
          <strong>
            Block Number
          </strong>
          <span>
            12345678
          </span>
        </div>
      </div>
      <footer
        class="sc-jffHpj bernAh"
      >
        <a
          class="sc-eJocfa cjHyfJ"
          href="https://onomy.io/"
          target="_blank"
        >
          About Onomy
        </a>
        <div
          class="sc-hhIiOg llmQSf"
        >
          <a
            class="sc-oeezt hTHyJt"
            href="https://t.me/onomyprotocol"
            target="_blank"
          >
            <svg
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M2.966 11.085L13.195 6.87c1.01-.439 4.435-1.844 4.435-1.844s1.583-.614 1.448.875c-.044.615-.4 2.766-.746 5.093l-1.1 6.893s-.088 1.01-.834 1.185a3.611 3.611 0 01-2.2-.79c-.176-.132-3.293-2.107-4.434-3.073a.832.832 0 01.044-1.4 168.85 168.85 0 004.61-4.39c.527-.527 1.054-1.756-1.141-.263l-6.184 4.168a2.58 2.58 0 01-2.02.044c-1.317-.395-2.854-.922-2.854-.922s-1.054-.659.746-1.361z"
                fill="#5e5b70"
              />
            </svg>
          </a>
          <a
            class="sc-oeezt hTHyJt"
            href="https://medium.com/onomy-protocol"
            target="_blank"
          >
            <svg
              viewBox="0 0 20 20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                opacity="0.5"
              >
                <path
                  d="M11.281 9.979A5.641 5.641 0 115.641 4.3a5.66 5.66 0 015.641 5.679m6.188 0c0 2.952-1.263 5.347-2.82 5.347s-2.82-2.394-2.82-5.347 1.261-5.346 2.818-5.346 2.82 2.394 2.82 5.347m2.531 0c0 2.645-.444 4.79-.992 4.79s-.992-2.145-.992-4.79.445-4.79.993-4.79S20 7.334 20 9.979"
                  fill="#8d89a3"
                />
              </g>
            </svg>
          </a>
          <a
            class="sc-oeezt hTHyJt"
            href="https://twitter.com/onomyprotocol"
            target="_blank"
          >
            <svg
              viewBox="0 0 20 20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M16.555 6.438v.46a10.4 10.4 0 01-.66 3.6 10.744 10.744 0 01-1.961 3.282 9.729 9.729 0 01-3.2 2.4 10.445 10.445 0 01-4.383.921 10.247 10.247 0 01-2.922-.42 9.937 9.937 0 01-2.6-1.181q.42.041.86.04a7.14 7.14 0 002.381-.4 7.457 7.457 0 002.081-1.121 3.592 3.592 0 01-2.081-.73 3.463 3.463 0 01-1.261-1.771 3.579 3.579 0 00.66.06 3.7 3.7 0 00.941-.12 3.472 3.472 0 01-1.461-.67 3.567 3.567 0 01-1.031-1.261 3.749 3.749 0 01-.39-1.591v-.06a3.369 3.369 0 001.641.46 3.617 3.617 0 01-1.171-1.291 3.517 3.517 0 01-.43-1.711 3.574 3.574 0 01.48-1.8 10.262 10.262 0 007.4 3.762 4.156 4.156 0 01-.08-.82 3.5 3.5 0 01.48-1.8 3.627 3.627 0 011.311-1.311 3.462 3.462 0 011.791-.49 3.563 3.563 0 012.622 1.141 6.994 6.994 0 002.281-.881 3.481 3.481 0 01-.61 1.151 3.694 3.694 0 01-.971.851 7.316 7.316 0 002.081-.58 7.525 7.525 0 01-1.798 1.881z"
                fill="#8d89a3"
                opacity="0.5"
              />
            </svg>
          </a>
        </div>
      </footer>
    </div>
  </div>
</DocumentFragment>
`;
